--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.PDS.app">
+         <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="packagingservices"
         android:name="${applicationName}"
