--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   image_picker:  
   connectivity: 
   flutter_rating_bar:  
+  file_picker: 
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
