--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   image_picker:  
   connectivity: 
   flutter_rating_bar: 
+  stomp_dart_client:
   emoji_picker_flutter:  
   # keyboard_emoji_picker: ^1.0.3
   flutter_markdown:
