--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   # keyboard_emoji_picker: ^1.0.3
   flutter_markdown:
   file_picker: 
+  permission_handler:
   
 dev_dependencies: 
   flutter_test: 
