--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,15 @@ dependencies:
   flutter_html: ^2.2.1
   another_flushbar: ^1.12.30
   flutter_keyboard_visibility: ^5.4.1
+  syncfusion_flutter_pdfviewer: ^21.2.3
   
    
   # keyboard_emoji_picker: ^1.0.3
   flutter_markdown:
   file_picker: 
   permission_handler:
+  photo_view: ^0.14.0
+  
   
 dev_dependencies: 
   flutter_test: 
