--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   flutter_keyboard_visibility: ^5.4.1
   syncfusion_flutter_pdfviewer: ^21.2.3
   url_launcher:
-  share_plus:  
+  share_plus: 
+  carousel_slider: ^4.2.1
+  dots_indicator: ^3.0.0 
    
   # keyboard_emoji_picker: ^1.0.3
   flutter_markdown:
