--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_core : 
   firebase_messaging: ^14.6.3
   device_info_plus: ^8.1.0
+  firebase_dynamic_links: ^5.3.2
   flutter_widget_from_html_core: ^0.10.3
   flutter_html: ^2.2.1
   another_flushbar: ^1.12.30
