--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_picker: 
   permission_handler:
   photo_view: ^0.14.0
+  flutter_slidable: ^3.0.0
   
   
 dev_dependencies: 
