--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,14 @@ dependencies:
   carousel_slider: ^4.2.1
   dots_indicator: ^3.0.0 
   getwidget:
-   
+  flutter_instagram_storyboard: ^0.0.8
+  flutter_slidable: ^3.0.0 
   # keyboard_emoji_picker: ^1.0.3
   flutter_markdown:
   file_picker: 
   permission_handler:
   photo_view: ^0.14.0
-  flutter_slidable: ^3.0.0
+  
   
   
 dev_dependencies: 
