--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^21.2.3
   url_launcher:
   share_plus: 
+  hashtagable: ^2.3.0+1
   carousel_slider: ^4.2.1
   dots_indicator: ^3.0.0 
   getwidget:
