--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
 dependencies: 
   flutter: 
     sdk: flutter
+  multi_dropdown:
   photo_gallery: ^2.1.1
   cached_network_image:  
   flutter_svg: 
@@ -46,7 +47,8 @@ dependencies:
   stories_editor:
     path: ./stories_editor
   photo_view: ^0.14.0
-  multiselect: ^0.1.0
+  multi_select_flutter: ^4.1.3
+  
   
   
   
