--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,6 +27,14 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/home/anandpatel/Documents/PDS_Flutter/PDSApp.jks')
+            storePassword 'pds@123'
+            keyAlias 'key0'
+            keyPassword 'pds@123'
+        }
+    }
     namespace "com.pds.app"
     compileSdkVersion 33
     // flutter.compileSdkVersion
@@ -47,7 +55,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.pds.app"
+        applicationId "com.pdsforum.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 20
@@ -64,7 +72,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
