--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
     path: ./stories_editor
   photo_view: ^0.14.0
   multi_select_flutter: ^4.1.3
+  flutter_switch: ^0.3.2
+  flutter_downloader: ^1.11.5
   
   
   
