--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   multi_select_flutter: ^4.1.3
   flutter_switch: ^0.3.2
   flutter_downloader: ^1.11.5
+  linkfy_text: ^1.1.5
   
   
   
