--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_downloader: ^1.11.5
   linkfy_text: ^1.1.5
   video_player: 
+  cr_mentions: ^0.0.1+1
+  flutter_mentions:
   # dio: ^5.3.4
   
   
