--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   linkfy_text: ^1.1.5
   video_player: 
   cr_mentions: ^0.0.1+1
+  multiselect: ^0.0.7
   flutter_mentions:
   # dio: ^5.3.4
   
