--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   cr_mentions: ^0.0.1+1
   multiselect: ^0.0.7
   flutter_mentions:
+  flutter_typeahead: ^4.8.0
   # dio: ^5.3.4
   
   
