--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   multiselect: ^0.0.7
   flutter_mentions:
   flutter_typeahead: ^4.8.0
+  chewie: ^1.7.4
+  visibility_detector: ^0.4.0+2
   # dio: ^5.3.4
   
   
