--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   video_player: 
   cr_mentions: ^0.0.1+1
   multiselect: ^0.0.7
-  flutter_mentions:
+  flutter_mentions: ^2.0.1
   flutter_typeahead: ^4.8.0
   # dio: ^5.3.4
   
