--- a/stories_editor/pubspec.yaml
+++ b/stories_editor/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   #message
   fluttertoast: ^8.1.1
   oktoast: ^3.3.1
-
+  
   animated_text_kit: ^4.2.2
 
   flutter_screenutil: ^5.9.0
@@ -41,7 +41,9 @@ dependencies:
   http:
   photo_manager:
     path: ./photo_manager
-  
+  video_trimmer: 
+  video_editor: ^3.0.0
+  ffmpeg_kit_flutter_min:
 
 dev_dependencies:
   flutter_test:
