--- a/stories_editor/pubspec.yaml
+++ b/stories_editor/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   oktoast: ^3.3.1
   
   animated_text_kit: ^4.2.2
-
+  shared_preferences: 
   flutter_screenutil: ^5.9.0
   path_provider: ^2.1.1
   http:
