--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   video_thumbnail: ^0.5.3
   badges: ^3.1.2
   widget_zoom: ^0.0.3
+  flutter_langdetect: ^0.0.2
   # dio: ^5.3.4
   
   
