--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   badges: ^3.1.2
   widget_zoom: ^0.0.3
   flutter_langdetect: ^0.0.2
+  zego_uikit_prebuilt_call:
+  zego_uikit:
   # dio: ^5.3.4
   
   
