--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.pds.app</string>
+	<string>com.inpackaging.app</string>
 	<key>PROJECT_ID</key>
 	<string>pds-ac78f</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1027618813989:ios:544ab06faba9b0a8a0e7cc</string>
+	<string>1:1027618813989:ios:a17ff179996bbdc6a0e7cc</string>
 </dict>
 </plist>
