--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,8 +70,8 @@ dependencies:
   badges: ^3.1.2
   widget_zoom: ^0.0.3
   flutter_langdetect: ^0.0.2
-  zego_uikit_prebuilt_call: ^4.2.1
-  zego_uikit:
+  # zego_uikit_prebuilt_call: ^4.2.1
+  # zego_uikit:
   flutter_styled_toast: ^2.2.1
   # dio: ^5.3.4
   
