--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,7 +58,15 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
-
+        ndk {
+           abiFilters "arm64-v8a"
+           abiFilters "x86_64"
+        }
+    }
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
     }
 
     buildTypes {
