--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,7 @@ android {
         ndk {
            abiFilters "arm64-v8a"
            abiFilters "x86_64"
+           abiFilters "x86"
         }
     }
     packagingOptions {
