--- a/stories_editor/android/app/src/main/AndroidManifest.xml
+++ b/stories_editor/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
         
     <application
-        android:label="IP"
+        android:label="InPackaging"
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
