--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: pds
 description: A new Flutter project.
 version: 1.0.0+15
 environment: 
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.12.0 <4.0.0'
 dependencies: 
   flutter: 
     sdk: flutter
@@ -87,6 +87,8 @@ dependency_overrides:
   xml: ^6.0.1
   win32: ^3.0.0
   uuid: ^4.1.0
+  collection: ^1.18.0
+
   
 flutter: 
   uses-material-design: true
