--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   emoji_picker_flutter:
   flutter_smart_dialog:
   country_pickers:  
-  stomp_dart_client:
+  stomp_dart_client: ^1.0.3
   firebase_core : 
   firebase_messaging: ^14.6.3
   device_info_plus: ^8.1.0
