--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_styled_toast: ^2.2.1
   flutter_observer: ^2.0.0
   swipe_to: ^1.0.6
+  flutter_staggered_animations: ^1.1.1
   # dio: ^5.3.4
   
   
