--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,9 @@ dependencies:
   flutter_observer: ^2.0.0
   swipe_to: ^1.0.6
   flutter_staggered_animations: ^1.1.1
+  zoom_pinch_overlay: ^1.4.3
+  pinch_zoom_release_unzoom: ^1.0.1
+  
   # dio: ^5.3.4
   
   
