--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+        <uses-permission android:name="android.permission.GET_TASKS" />
         <uses-permission android:name="android.permission.WAKE_LOCK" />    
         <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />        
         <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />        
@@ -14,9 +15,12 @@
         <uses-permission android:name="android.permission.VIBRATE" />        
         <uses-permission android:name="android.permission.INTERNET"/>    
         <uses-permission android:name="android.permission.INTERNET"/>
+        <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
+        <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.CAMERA" />
+        <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
         <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
         <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
         <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" /> 
