--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: pds
 description: A new Flutter project.
-version: 1.0.0+15
+version: 1.0.0+17
 environment: 
   sdk: '>=2.12.0 <3.0.0'
 dependencies: 
@@ -32,7 +32,7 @@ dependencies:
   flutter_keyboard_visibility: ^5.4.1
   syncfusion_flutter_pdfviewer: ^21.2.3
   url_launcher:
-  share_plus: 
+  share_plus: ^7.2.2
   translator: 
   hashtagable: ^2.3.0+1
   carousel_slider: ^4.2.1
