--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -63,6 +63,8 @@
                 <data android:scheme="mailto" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="inpackaging.page.link" android:scheme="https"/>
+                <data android:host="inpackaging.page.link" android:scheme="http"/>
                </intent-filter> 
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
